# ardent-ai

./: .gitignore  Bitter Leaf Apothecary.md  Feedback.md  Fina.md  README.md  SOUL.md  Spren.md  reindex-output.txt  vault_index.json
.ai/: AGENTS.md  CONTRACT.md  Modelfile  OUTPUT_CONTRACT.md  SOUL.md  agent.py  config.py  inbox.py  llm_client.py  load_prompt.py  main.py  parser.py  pipeline.py  prompt_builder.py  prompts.py  pyproject.toml  reindex.py  requirements.txt  response_parser.py  run_pipeline.py  vault.py  vault_context.py  vault_index.json  vault_index.py  workflow_integration.py
.ai/03 NPCs/: Test NPC.md
.ai/cmd/agent/: main.py
.ai/cmd/reindex/: main.py
.ai/internal/inbox/: __init__.py
.ai/internal/llm/: __init__.py
.ai/internal/outbox/: __init__.py
.ai/internal/prompt_builder/: __init__.py
.ai/internal/response_parser/: __init__.py
.ai/pkg/config/: __init__.py
.ai/pkg/vault/: __init__.py  crawler.py  file_io.py  io.py  mapping.py  parser.py  retrieval.py  score.py
.ai/tests/: conftest.py  test_agent.py  test_apply_operations.py  test_inbox.py  test_llm.py  test_llm_client.py  test_outbox.py  test_parser.py  test_pipeline.py  test_prompt_builder.py  test_prompts.py  test_response_parser.py  test_run_pipeline.py  test_vault.py  test_vault_context.py  test_vault_index.py
.ai/vault/: __init__.py  crawler.py  file_io.py  io.py  mapping.py  parser.py  retrieval.py  utilities.py
.obsidian/: community-plugins.json  core-plugins.json  types.json  workspace.json
.quartz/: link_content.sh  quartz.config.ts  setup-content.sh
Inbox/: Food.md  (+72 more)
(+336 files in other folders)
